<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.hhu</groupId>
  <artifactId>stateofstructure</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>stateofstructure</name>

<properties>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  <maven.compiler.release>25</maven.compiler.release>
</properties>

  <dependencies>


      <!-- Libary for visualization of Datastructures, Lightweight Java Visualizer-->
    <dependency>
      <groupId>org.atp-fivt</groupId>
      <artifactId>ljv</artifactId>
      <version>1.03</version>
    </dependency>

 <!-- Libary for Graph visualization. Graphviz Java-->
    <dependency>
      <groupId>guru.nidi</groupId>
      <artifactId>graphviz-java</artifactId>
      <version>0.18.1</version>
    </dependency>
    <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.2.13</version>
    </dependency>

  <!-- Libary for Code Formatting-->
    <dependency>
        <groupId>com.fifesoft</groupId>
        <artifactId>rsyntaxtextarea</artifactId>
        <version>3.3.3</version>
    </dependency>
    <!-- Libary for Modernized Swing-->
    <dependency>
        <groupId>com.formdev</groupId>
        <artifactId>flatlaf</artifactId>
        <version>3.4</version>
    </dependency>


    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
        <scope>test</scope>
      </dependency>

    <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>5.7.0</version>
        <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
  <resources>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>
  <plugins>

    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.13.0</version>
      <configuration>
        <compilerArgs>
          <arg>-Xlint:deprecation</arg>
          <arg>-Xlint:unchecked</arg>
        </compilerArgs>
      </configuration>
    </plugin>

    <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-surefire-plugin</artifactId>
    <version>3.2.5</version>
    <configuration>
      <argLine>
        --add-opens java.base/java.util=ALL-UNNAMED
        --add-opens java.base/java.lang=ALL-UNNAMED
        --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
        -Dnet.bytebuddy.experimental=true
      </argLine>
    </configuration>
    </plugin>
    
    <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>exec-maven-plugin</artifactId>
      <version>3.1.0</version>
          <configuration>
            <executable>java</executable>
            <arguments>
              <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
              <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
              <argument>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</argument>
              <argument>--enable-native-access=ALL-UNNAMED</argument>
              <argument>-Djava.awt.headless=false</argument>
              <argument>-cp</argument>
              <classpath/>
              <argument>Main</argument>
            </arguments>
          </configuration>
      </plugin>

<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-shade-plugin</artifactId>
  <version>3.5.0</version>
  <executions>
    <execution>
      <phase>package</phase>
      <goals>
        <goal>shade</goal>
      </goals>
      <configuration>
        <transformers>
          <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>Main</mainClass>
              <manifestEntries>
                <Add-Opens>java.base/java.lang java.base/java.util java.base/java.util.concurrent.atomic</Add-Opens>
                <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
              </manifestEntries>
          </transformer>
        </transformers>
      </configuration>
    </execution>
  </executions>
</plugin>


  </plugins>
</build>
</project>